syntax = "proto3";

package telemetry.service.collector;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "telemetry/messages/hub_event.proto";
import "telemetry/messages/sensor_event.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.collector";
option java_multiple_files = true;

service CollectorController {
  rpc CollectHubEvent(telemetry.message.event.HubEventProto) returns (google.protobuf.Empty);
  rpc CollectSensorEvent(telemetry.message.event.SensorEventProto) returns (google.protobuf.Empty);
}